--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-pandas
-PyPDF2
-streamlit
+streamlit==1.44.1
+pyyaml==6.0.2
+langchain==0.3.19
+langgraph==0.2.73
+google-generativeai==0.8.4
+langchain-openai
+langchain-google-genai
+langchain-community
+openai
+requests
 openpyxl
 xlrd
+pandas
+PyPDF2
+
