--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ google-generativeai==0.8.4
 langchain-openai
 langchain-google-genai
 langchain-community
+langchain-anthropic
 openai
 requests
 openpyxl
