--- a/settings/config.example.yml
+++ b/settings/config.example.yml
@@ -1,17 +1,39 @@
 llm_configs:
-  gpt-4o-mini:
-    api_key: ""
-  
-  gpt-4o:
-    api_key: ""
-  
   gemini-2.5-flash-preview-04-17:
-    api_key: ""
+    api_key: 
+    temperature: 
+
+  gpt-4.1:
+    api_key: 
+    temperature: 
+
+  gpt-4o:
+    api_key: 
+    temperature: 
+
+  gpt-4o-mini:
+    api_key: 
+    temperature: 
 
   llama-3.3:
-    api_key: ""
-    base_url: ""
+    api_key: 
+    base_url: 
+    temperature: 
+
+  llama-4-scout:
+    api_key: 
+    base_url: 
+    temperature: 
+
+  qwen3-30b-a3b:
+    api_key: 
+    base_url: 
+    temperature: 
+  
+  claude-3-7-sonnet-20250219:
+    api_key: 
+    temperature: 
+
   
 llm_params:
-  model: gpt-4o-mini
-  temperature: 0
+  model: 
